<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background">

    <EditText
        android:id="@+id/channel"
        android:layout_width="371dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/enter_channel_name"
        android:textSize="20sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="171dp"
        android:layout_height="154dp"
        android:layout_marginTop="156dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channel" >

        <RadioButton
            android:id="@+id/audience"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/audience"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/broadcast"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/broadcaster"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/mbnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="64dp"
        android:background="@color/teal_700"
        android:text="@string/enter_chat"
        android:backgroundTint="@color/agora_theme"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>