<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoChatActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"/>
    <FrameLayout
        android:layout_width="160dp"
        android:layout_height="284dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="#85595656" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="510dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:contentDescription="@string/todo"
                android:onClick="onLocalAudioMuteClick"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/mute"
                tools:ignore="OnClick,UsingOnClickInXml,DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:onClick="onEndCallClicked"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/end_phone_call"
                tools:ignore="OnClick,UsingOnClickInXml"
                android:contentDescription="@string/todo2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:onClick="onSwitchCameraClicked"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/rotatecam"
                tools:ignore="OnClick,UsingOnClickInXml"
                android:contentDescription="@string/todo3" />

        </LinearLayout>
    </LinearLayout>




</RelativeLayout>